--- a/index.html
+++ b/index.html
@@ -2,31 +2,12 @@
 <html>
 <head>
 	<title> Class Schedule </title>
-	<style>
-		table, th, td {
-			/*BORDER: size type color*/
-			border: 1px solid black;
-
-		}
-		th, td {
-			/*padding: giving space around content*/
-			padding:  15px;
-		}
-		table{
-			font-family:courier;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet">
 </head>
 <body>
+	<div id="container" style="display:flex;justify-content:center;align-items:center;">
 	<table>
-		<colgroup>
-		<col style="background-color:#ffffff">
-		<col style="background-color:#e6ffe6">
-		<col style="background-color:#ccffcc">
-		<col style="background-color:#b3ffb3">
-		<col style="background-color:#99ff99">
-		<col style="background-color:#80ff80">
-		</colgroup>
 		<caption> Class Schedule</caption>
 		<tr>
 			<th>Time/Day</th>
@@ -37,60 +18,61 @@
 			<th>Friday</th>
 		</tr>
 		<tr>
-			<td>8:30-9:45</td>
+			<td class="time">8:30-9:45</td>
 			<td> </td>
-			<td rowspan=2>NSCI 1040</td>
-			<td> </td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>10:00-11:15</td>
-			<td>ENGL 1102</td>
-			<td> </td>
-			<td>ENGL 1102</td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>11:15-12:45</td>
-			<td>THEO 1000</td>
-			<td> </td>
-			<td>THEO 1000</td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>13:00-14:15</td>
-			<td> </td>
-			<td>HIST 1550</td>
-			<td> </td>
-			<td> </td>
-			<td>HIST1550</td>
-		</tr>
-		<tr>
-			<td>14:30-15:45</td>
-			<td>CISC 2350</td>
-			<td> </td>
-			<td> </td>
-			<td>CISC 2350</td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td>16:00-18:00</td>
-			<td> </td>
-			<td> </td>
+			<td rowspan=2 class="course">NSCI 1040</td>
 			<td> </td>
 			<td> </td>
 			<td> </td>
 		</tr>
 		<tr>
-			<td>18:00-20:45</td>
+			<td class="time">10:00-11:15</td>
+			<td class="course">ENGL 1102</td>
+			<td> </td>
+			<td class="course">ENGL 1102</td>
+			<td> </td>
+		</tr>
+		<tr>
+			<td class="time">11:15-12:45</td>
+			<td class="course">THEO 1000</td>
+			<td> </td>
+			<td class="course">THEO 1000</td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
+			<td class="time">13:00-14:15</td>
+			<td> </td>
+			<td class="course">HIST 1550</td>
+			<td> </td>
+			<td> </td>
+			<td class="course">HIST1550</td>
+		</tr>
+		<tr>
+			<td class="time">14:30-15:45</td>
+			<td class="course">CISC 2350</td>
+			<td> </td>
+			<td> </td>
+			<td class="course">CISC 2350</td>
+			<td> </td>
+		</tr>
+		<tr>
+			<td class="time">16:00-18:00</td>
 			<td> </td>
 			<td> </td>
 			<td> </td>
-			<td>NMDD 1001</td>
+			<td> </td>
+			<td> </td>
+		</tr>
+		<tr>
+			<td class="time">18:00-20:45</td>
+			<td> </td>
+			<td> </td>
+			<td> </td>
+			<td class="course">NMDD 1001</td>
 			<td> </td>
 		</tr>
 	</table>
+</div>
 </body>
 </html>
